# dev-ops-arch

./: README.md
03_kubernetes/: README.md
07_solid/: README.md
09_ddd_modelagem_tatica_e_patterns/: README.md
10_event_storming/: README.md
11_microsservice/: README.md
12_event_driven_architecture/: README.md
14_microsservice/: README.md
15_event_driven_architecture/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
17_admin_catalogo_de_videos/: README.md
19_otel/: Makefile
1_docker/: README.md
20_keycloak/: .gitignore  Makefile  README.md  docker-compose.yaml
21_apache_kafka/: README.md
23_service_mesh_istio/: README.md
28_gitops/: Dockerfile  README.md
2_fundamentos_arquitetura_software/: README.md
4_solid/: README.md
6_ddd_modelagem_tatica_e_patterns/: README.md
8_ddd/: README.md
_curso/17_projeto_pratico_backend/python/: .gitignore  .pdm.toml  README.md  pyproject.toml
_curso/17_projeto_pratico_backend/python/.devcontainer/: devcontainer.json  docker-compose.yml
_curso/17_projeto_pratico_backend/python/src/: run_unit_tests.py
_curso/17_projeto_pratico_backend/python/src/__shared/domain/: entities.py  value_objects.py
_curso/17_projeto_pratico_backend/python/src/__shared/tests/unit/domain/: test_unit_entities.py  test_unit_value_objects.py
_curso/17_projeto_pratico_backend/python/src/category/domain/: entities.py
_curso/17_projeto_pratico_backend/python/src/category/tests/unit/domain/: test_unit_entities.py
video-client/: index.html
video-streeaming/: README.md
(+610 files in other folders)
