[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vinicius Alves", email = "vinicius_o.a@live.com"},
]
dependencies = [
    "autopep8>=1.7.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
